# gn_ninja_learning_RUST

./: .gn  BUILD.gn  BUILDCONFIG.gn  README.md  main.c  main.rs  print.rs  printf.c  printf.h  rust-project.json
scripts/: gen_rust_project.py
toolchain/: BUILD.gn
