toolchain("default") {
  tool("rust_bin") {
    command = "rustc {{source}} -o {{output}}"
    description = "RUST {{source}}"
    outputs = [ "{{output_dir}}/{{target_output_name}}{{output_extension}}" ]
    default_output_dir = "{{root_out_dir}}"
  }

  tool("stamp") {
    command = "touch {{output}}"
    description = "STAMP {{output}}"
  }
}
